--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
   hooks:
     # Run the linter.
     - id: ruff
-      args: [ --fix ]
+      args: [ "--config", "pyproject.toml", "--fix" ]
     # Run the formatter.
     - id: ruff-format
+      args: [ "--config", "pyproject.toml" ]
